<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rockett</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_addTimer">Launch</string>
    <string name="main_timer">[-----]</string>
    <string name="txt_total_productivity" translatable="true">TOTAL PRODUCTIVITY MINUTES</string>
    <string name="txt_submain_prev_week">prev. week</string>
    <string name="txt_submain_average_user">average min.</string>
    <string name="txt_submain_total_rocketts">total rocketts</string>
    <string name="txt_submain_prev_week_result">[-----]</string>
    <string name="txt_submain_average_user_result">[-----]</string>
    <string name="txt_submain_total_rocketts_result">[-----]</string>
    <string name="txt_rockett_the_world">Rockett the world</string>
    <string name="txt_view_performances">View performances</string>
    <string name="txt_add_note">Add task</string>
    <string name="txt_task_hint">What will you work on ?</string>
    <string name="title_activity_timer_settings">Timer Settings</string>
    <string name="working_on">Working on</string>
    <string name="task_for_empty_intent">making the world a better place</string>
    <string name="taskParamForIntent">taskNote</string>
    <string name="performancesActivity">Your performances</string>
    <string name="delete">Delete</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="askConfirmation">Are you sure you want to wipe all the data ? </string>
    <string name="acceptWipe">Yes</string>
    <string name="denieWipe">No</string>

    <string name="Chrono_pauseBtn_Pause">Pause</string>
    <string name="Chrono_pauseBtn_Resume">Resume</string>

    <!-- Populate spinner in Timer Settings -->
    <string-array name="timersettings_options">
        <item>Chronometer</item>
        <item>Pomodoro</item>
    </string-array>

    <string name="wipe_data">Wipe Data</string>

    <string name="title_activity_chronometer">ChronometerActivity</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="title_activity_performances">PerformancesActivity</string>
    <string name="title_activity_login_or_signup">Login</string>
    <string name="title_activity_authentificate_user">Authentification</string>

</resources>
