<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_container"
        android:paddingTop="70dp"
        android:paddingBottom="20dp"
        android:background="@color/main_blue">

        <TextView android:text="@string/main_timer" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_timer"
            android:textColor="#ffffff"
            android:textSize="@dimen/total_times"
            android:layout_gravity="center_horizontal"
            android:singleLine="false" />

        <TextView android:text="@string/txt_total_productivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_txt_productivity"
            android:textSize="@dimen/txt_productivity"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/blue_800"
            android:textIsSelectable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="#ffffff"
        android:paddingBottom="30dp"
        android:paddingLeft="15dp"
        android:paddingTop="30dp"
        android:paddingRight="15dp"
        android:elevation="6dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_total_rocketts"
                android:src="@drawable/logosmall"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_submain_total_rocketts_result"
                    android:id="@+id/total_rocketts"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:background="#ffffff"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_submain_total_rocketts"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_horizontal"
                    android:background="#ffffff"
                    android:textSize="13sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_marginLeft="25dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_average_user"
                android:src="@drawable/ic_action_alarm"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_submain_average_user_result"
                    android:id="@+id/average_productivity"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:background="#ffffff"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_submain_average_user"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:background="#ffffff"
                    android:textSize="13sp" />
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/txt_view_performances"
            android:id="@+id/button_viewPerfs"
            android:textColor="#ffffffff"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>
